--- a/notes-app-client/src/containers/Home.css
+++ b/notes-app-client/src/containers/Home.css
@@ -11,3 +11,16 @@
 .Home .lander {
     color: rgb(127, 151, 19);
 }
+
+.Home .notes h4 {
+font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  overflow: hidden;
+  line-height: 1.5;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.Home .notes p {
+  color: #666;
+}
