--- a/notes-app-client/src/containers/Home.css
+++ b/notes-app-client/src/containers/Home.css
@@ -24,3 +24,11 @@ font-family: "Open Sans", sans-serif;
 .Home .notes p {
   color: #666;
 }
+
+.Home .lander div {
+    padding-top: 20px;
+}
+
+.Home .lander div a:first-child {
+    margin-right: 20px;
+  }
